:bug: mon-pix: improve contrast of the v3 refresh page after live alert

--- a/mon-pix/app/styles/components/_feedback-panel-v3.scss
+++ b/mon-pix/app/styles/components/_feedback-panel-v3.scss
@@ -20,7 +20,7 @@
       align-items: center;
       margin: 0;
       padding: 0;
-      color: $pix-primary;
+      color: $pix-primary-70;
       font-weight: $font-bold;
     }
   }
